NAS-107062 added show more and collapse button; show rows depends on the table height; fixed table css

--- a/src/app/pages/common/entity/table/table.component.css
+++ b/src/app/pages/common/entity/table/table.component.css
@@ -69,5 +69,7 @@ div.state-info {
 
 div.view-more-row {
     padding: 9px;
-    align-self: center;
+    background: var(--bg2);
+    width: 100%;
+    text-align: center;
 }
